--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,7 +1,7 @@
 {
   // for cf pages deployment
   "$schema": "node_modules/wrangler/config-schema.json",
-  "name": "cranston-unblocker", // 替换为你的cloudflare page的名字
+  "name": "siteproxy",  // ← RIGHT HERE, use "siteproxy"
   "pages_build_output_dir": "build/cf_page",
   "compatibility_date": "2025-07-23",
   "compatibility_flags": ["nodejs_compat"],
@@ -9,7 +9,7 @@
     "enabled": true
   },
   "vars": {
-    "proxy_url": "https://testx-efr.pages.dev", // 替换为你的代理服务器域名, 必须替换为HTTPS
-    "token_prefix": "/xxxx/" // 替换为你想设置的访问密码。注意首尾的斜杠必须保留，如果密码为空，表示不需要密码也可以访问。
+    "proxy_url": "https://cranston-unblocker.pages.dev",  // CHANGE THIS TO YOUR REAL .pages.dev URL AFTER DEPLOY SUCCESS
+    "token_prefix": "/liamrules2026/"  // your password path, keep slashes or "" for no password
   }
 }
